View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027602 | Community | OCCT:Foundation Classes | public | 2016-06-14 15:03 | 2016-12-09 16:37 |
Reporter | abv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.6.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027602: gp_TrsfForm.hxx - wrong comment to enum | ||||
Description | gp_Trsf.hxx contains comment related to gp_EulerAngles, most likely due to error in CDL header extractor. This is present since at least OCCT 6.6.0 (it was OK in OCCT 6.5.0). The issue has been reported on user's forum in this thread: http://www.opencascade.com/content/get-euler-angles-gptrsf-gpquaterniongeteulerangles | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27602 has been created by abv. SHA-1: 5b61bb067f99a77b1d77c2b375b04c5890166fa2 Detailed log of new commits: Author: abv Date: Tue Jun 14 15:05:10 2016 +0300 0027602: gp_TrsfForm.hxx - wrong comment to enum Comment is corrected |
|
Fixed, please integrate (no testing is required) |
|
Branch CR27602 has been deleted by inv. SHA-1: 5b61bb067f99a77b1d77c2b375b04c5890166fa2 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-06-14 15:03 | abv | New Issue | |
2016-06-14 15:03 | abv | Assigned To | => abv |
2016-06-14 15:05 | git | Note Added: 0054961 | |
2016-06-14 15:05 | abv | Note Added: 0054962 | |
2016-06-14 15:05 | abv | Status | new => resolved |
2016-06-14 15:05 | abv | Steps to Reproduce Updated | |
2016-06-14 15:05 | abv | Assigned To | abv => bugmaster |
2016-06-14 15:05 | abv | Status | resolved => reviewed |
2016-06-14 17:05 |
|
Status | reviewed => tested |
2016-06-14 17:05 |
|
Test case number | => Not needed |
2016-06-17 12:04 | bugmaster | Changeset attached | => occt master bd80ecfa |
2016-06-17 12:04 | bugmaster | Status | tested => verified |
2016-06-17 12:04 | bugmaster | Resolution | open => fixed |
2016-06-17 12:13 | git | Note Added: 0055137 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |