0027602: gp_TrsfForm.hxx - wrong comment to enum

Comment is corrected